# RustQuant

./: README.md
backend/: .env.example  Cargo.toml  Dockerfile  Readme.md
backend/src/: config.rs  main.rs  routes.rs
backend/src/api/: auth.rs  health.rs  market.rs  portfolio.rs  prediction.rs  trading.rs
backend/src/backtesting_engine/: performance_metrics.rs  simulator.rs  strategy_runner.rs
backend/src/db/: connection.rs  portfolio_repository.rs  trade_repository.rs  user_repository.rs
backend/src/market_data_engine/: data_fetcher.rs  feature_engineering.rs  indicators.rs
backend/src/portfolio_engine/: performance.rs  portfolio_manager.rs  risk_manager.rs
backend/src/risk_engine/: drawdown.rs  position_limits.rs  risk_manager.rs  var.rs
backend/src/services/: auth_service.rs  market_service.rs  portfolio_service.rs  prediction_service.rs  trading_service.rs
backend/src/trading_engine/: execution_engine.rs  order_manager.rs
backend/src/utils/: jwt.rs  logger.rs  math.rs  time.rs
data_pipeline/: Dockerfile  Readme.md
data_pipeline/feature_engineering/: technical_indicators.py  volatility_features.py
data_pipeline/ingestion/: alphavantage_fetcher.py  polygon_fetcher.py  yahoo_fetcher.py
data_pipeline/monitoring/: grafana_dashboards.json  prometheus.yml
deployment/: Readme.md  docker-compose.local.yml  render.yaml
frontend/: .env.example  Readme.md  package.json
ml_service/: Dockerfile  Readme.md  app.py  config.rs
scripts/: run_backend.sh  run_frontend.sh  run_ml_service.sh  seed_database.sh  setup_project.sh
(+28 files in other folders)
