[package]
name = "rustquantai-backend"
version = "0.1.0"
edition = "2021"

[dependencies]

axum = "0.7"

tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tower-http = { version = "0.5", features = ["cors"] }

dotenvy = "0.15"

tracing = "0.1"
tracing-subscriber = "0.3"

sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"

jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
